feat(ui): Create PDFBookmarkWidget component, separate table of contents and bookmarks implementation, adjust and remove some header files

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -49,6 +49,7 @@ target_sources(
     # Viewer components
     ui/viewer/PDFViewer.cpp
     ui/viewer/PDFOutlineWidget.cpp
+    ui/viewer/PDFBookmarkWidget.cpp
     ui/viewer/PDFViewerEnhancements.cpp
     ui/viewer/PDFAnimations.cpp
     ui/viewer/QGraphicsPDFViewer.cpp
