ci: add tag-triggered builds and automated release workflow with multi-platform packaging

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -3,6 +3,8 @@ name: MacOS Build
 on:
   push:
     branches: [ master ]
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'  # 也在 tag push 时触发
   pull_request:
     branches: [ master ]
 
