--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,6 +3,8 @@ name: Windows Build
 on:
   push:
     branches: [ master ]
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'  # 也在 tag push 时触发
   pull_request:
     branches: [ master ]
 
